# Gaianox

./: CMakeLists.txt  Gaianox.sln  README.md
Data/: chunk.txt
Data/Saves/t3/: seed.txt
Data/Saves/t4/: seed.txt
Data/Saves/t5/: seed.txt
Gaianox/: Animation.h  Block.h  Chunk.h  Gaianox.vcxproj  Gaianox.vcxproj.filters  TextureManager.h
src/: Block.h  Chunk.h  Game.h  MainMenu.h  PerlinNoise.h  RenderedChunks.h  Steve.h  TextureManager.h  Utilities.h  main.cpp
